# TCP-Server-Multi-Thread

./: .clang-format  .gitignore  README.md
.devcontainer/: Dockerfile
client/: CMakeLists.txt  client-main.cpp
client/include/: client-exception.h  client.h  main-utilities-client.hpp  tcp-client-exception.h  tcp-client.h
client/src/: client-exception.cpp  client.cpp  tcp-client-exception.cpp  tcp-client.cpp
client/test/: CMakeLists.txt
cmake/: ClangFormat.cmake  CompilerWarnings.cmake  Hardening.cmake  StaticAnalyzers.cmake
server/: CMakeLists.txt  server-main.cpp
server/include/: main-utilities-server.hpp  server-exception.h  server.h  tcp-server-exception.h  tcp-server.h  thread-pool.h
server/src/: server-exception.cpp  server.cpp  tcp-server-exception.cpp  tcp-server.cpp  thread-pool.cpp
test/: CMakeLists.txt  functional_test.cpp  functional_tests.cpp  unit_test.cpp
